<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="100dp"
        android:paddingRight="20dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_google"
            android:contentDescription="@string/google_icons" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingTop="20sp"
            android:shadowColor="#0E0E0E"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/info_app"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:text="@string/sign_in_with_google"
            android:textColor="#fff" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/info_dev"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />


    </LinearLayout>


</ScrollView>